Finalizado el Lab1

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>App para no dormirse</title>
+    <title>App para no dormirse en el transporte</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
