--- a/labs-content/index.html
+++ b/labs-content/index.html
@@ -6,9 +6,10 @@
   <body>
     <h1>Home</h1>
     <p>Welcome to the home page.</p>
-    <p><a href="/Lab0">Lab0</a></p>
-    <p><a href="/Lab0-5">Lab0-5</a></p>
-    <p><a href="/Lab1">Lab1</a></p>
+    <p><a href="/Lab0">Lab0 - Lista Tareas</a></p>
+    <p><a href="/Lab0-5">Lab0.5 - Unicación GPS</a></p>
+    <p><a href="/Lab1">Lab1 - Mapa</a></p>
+    <p><a href="/Lab2">Lab2 - Lista</a></p>
     <p><a href="http://siu.astrak.es"> Actual </a> </p>
   </body>
 </html>
